--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,16 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[common_env_data]
+lib_deps_builtin = 
+	SPI
+	Wire
+
 [env:nanoatmega328new]
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
+monitor_speed = 115200
+lib_deps = 
+	https://github.com/olikraus/u8glib
+	olikraus/U8glib@^1.19.1
