Radio init paramaters adjusted

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,4 +20,5 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	https://github.com/olikraus/u8glib
-	olikraus/U8glib@^1.19.1
+	olikraus/u8glib@^1.19.1
+
